Added bootstrap cdn path

--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,8 @@
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>Ristorante Con Fusion</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -36,7 +38,7 @@ creations will tickle your culinary senses!</p>
                 <p>A unique combination of Indian Uthappam (pancake) and
  Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes,
  Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-                <p><a href="#">More »</a></p>
+                <p><a href="#">More ï¿½</a></p>
             </div>
         </div>
 
@@ -52,7 +54,7 @@ creations will tickle your culinary senses!</p>
  five different salads, six enticing appetizers, six main entrees and 
 five choicest desserts. Free flowing bubbly and soft drinks. All for 
 just $19.99 per person </p>
-                <p><a href="#">More »</a></p>
+                <p><a href="#">More ï¿½</a></p>
             </div>
         </div>
 
@@ -68,7 +70,7 @@ just $19.99 per person </p>
 International experience having worked closely with whos-who in the 
 culinary world, he specializes in creating mouthwatering Indo-Italian 
 fusion experiences. </p>
-                <p><a href="#">More »</a></p>
+                <p><a href="#">More ï¿½</a></p>
             </div>
         </div>
     </div>
